Updated HTML and CSS

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="index.css">
         <link href='https://fonts.googleapis.com/css?family=Karla' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-        <link rel="icon" type='image/x-icon' href=“/assets/favicon.ico" />
+        <link rel="icon" type='image/x-icon' href="/images/favicon.ico" /> 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
     <body>
